--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/bhowell841/bamazon#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "cli-table": "^0.3.1",
     "inquirer": "^6.2.2",
     "mysql": "^2.16.0",
     "table": "^5.2.3"
