--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "cli-table": "^0.3.1",
+    "dotenv": "^6.2.0",
     "inquirer": "^6.2.2",
     "mysql": "^2.16.0",
     "table": "^5.2.3"
